--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-853.5KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-502.9KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: 183.232.141.117, port: 559, type: ssr, cipher: chacha20-ietf, password: mblank1port, protocol: auth_aes128_md5, obfs: plain, protocol-param: 30999:LLLLiikk988iu, obfs-param: dC5tZS92cG5oYXQ}
-  - {name: 🇨🇳 中国-2.78MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 台湾-5.10MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇭🇰 香港-782.9KB/s(Youtube:不良林), server: hgc.sharecentre.xyz, port: 120, type: vmess, uuid: be84d85b-cefa-3d44-99f8-8dab4da44f2d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /nj, ws-headers: {Host: hgc.sharecentre.xyz}}
-  - {name: 🇨🇦 加拿大-436.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-724.8KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-690.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: 953e517.v9.gladns.com, port: 3331, type: vmess, uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /s/953e517.fm.apple.com:89692, ws-headers: {Host: 953e517.v9.gladns.com}}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-833.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-881.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-853.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-782.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-853.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-782.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-853.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-782.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-782.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-853.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-782.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-853.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-782.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-853.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-782.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-853.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-782.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
