--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: 183.232.141.117, port: 559, type: ssr, cipher: chacha20-ietf, password: mblank1port, protocol: auth_aes128_md5, obfs: plain, protocol-param: 30999:LLLLiikk988iu, obfs-param: dC5tZS92cG5oYXQ}
+  - {name: 🇺🇸 美国-456.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-436.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.78MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-390.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-724.8KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-690.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: 953e517.v9.gladns.com, port: 3331, type: vmess, uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /s/953e517.fm.apple.com:89692, ws-headers: {Host: 953e517.v9.gladns.com}}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-833.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-881.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-587.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 未知国家-1.45MB/s(Youtube:不良林), server: 207.2.120.172, port: 443, type: trojan, password: 34c2ebbd-8ecf-3c1c-a945-19cd394a3e43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-430.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-456.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-587.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-456.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-587.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-456.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-587.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-456.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-587.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-456.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-587.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-456.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-587.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-456.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-436.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-724.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-690.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-587.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-833.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
