--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-19.50MB/s(Youtube:不良林), server: a01-cn-s1k111.cdnlive.straycloud.xyz, port: 604, type: ss, cipher: aes-128-gcm, password: 2bfd73bb-fb0c-4c1a-9d4f-92347b8caa32}
-  - {name: 🇨🇳 中国-881.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-390.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-366.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-8.87MB/s(Youtube:不良林), server: 139.162.7.177, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 139.162.7.177}}
   - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 129.146.133.157, port: 51009, type: vmess, uuid: 81714cef-9bde-4a08-aa50-d6bc0172d78b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-2.22MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇰🇷 韩国-2.78MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.68MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
-  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
-  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-556.6KB/s(Youtube:不良林), server: 129.159.41.233, port: 32586, type: vmess, uuid: 341a9182-c423-499c-c46e-d17838b29037, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.53MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇦 加拿大-740.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-19.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-556.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-19.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-556.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-19.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-556.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-19.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-556.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-19.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-556.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-19.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-556.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-19.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-881.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-556.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
